Examen1/src/parser/PmmParser.java
// Generated from src/parser/Pmm.g4 by ANTLR 4.7
package parser;

	import ast.*;
	import ast.types.*;
 	import ast.definitions.*;
 	import ast.expressions.*;
 	import ast.statements.*;
 	import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, TRASH=52, 
		COMENTARIODEUNALINEA=53, COMENTARIODEVARIASLINEAS=54, INT_CONSTANT=55, 
		REAL_CONSTANT=56, CHAR_CONSTANT=57, ID=58;
	public static final int
		RULE_program = 0, RULE_listDefinitions = 1, RULE_main = 2, RULE_body = 3, 
		RULE_var_definition = 4, RULE_listIds = 5, RULE_func_definition = 6, RULE_returnType = 7, 
		RULE_lista_parametros = 8, RULE_statement = 9, RULE_statement_do_while = 10, 
		RULE_statement_ternary = 11, RULE_bloqueStatement = 12, RULE_statement_if = 13, 
		RULE_statement_while = 14, RULE_block = 15, RULE_statement_print = 16, 
		RULE_statement_input = 17, RULE_statement_assigment = 18, RULE_statement_return = 19, 
		RULE_expressions = 20, RULE_expression = 21, RULE_funcInvocation = 22, 
		RULE_expressionList = 23, RULE_type = 24, RULE_fields = 25, RULE_typeSimple = 26;
	public static final String[] ruleNames = {
		"program", "listDefinitions", "main", "body", "var_definition", "listIds", 
		"func_definition", "returnType", "lista_parametros", "statement", "statement_do_while", 
		"statement_ternary", "bloqueStatement", "statement_if", "statement_while", 
		"block", "statement_print", "statement_input", "statement_assigment", 
		"statement_return", "expressions", "expression", "funcInvocation", "expressionList", 
		"type", "fields", "typeSimple"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'def '", "'main'", "'('", "')'", "':'", "'{'", "'}'", "';'", "','", 
		"'do'", "'while '", "'?'", "'if '", "'else'", "'elseif '", "'print '", 
		"'input '", "'='", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'&&='", 
		"'||='", "'^='", "'return'", "'['", "']'", "'.'", "'-'", "'!'", "'*'", 
		"'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", 
		"'||'", "'^'", "'struct'", "'void'", "'int'", "'char'", "'double'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "TRASH", "COMENTARIODEUNALINEA", "COMENTARIODEVARIASLINEAS", 
		"INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public ListDefinitionsContext l1;
		public MainContext main;
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public ListDefinitionsContext listDefinitions() {
			return getRuleContext(ListDefinitionsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((ProgramContext)_localctx).l1 = listDefinitions();
			setState(55);
			((ProgramContext)_localctx).main = main();
			setState(56);
			match(EOF);

					List<Definition> definitions = ((ProgramContext)_localctx).l1.ast;
					definitions.add(((ProgramContext)_localctx).main.ast);
					((ProgramContext)_localctx).ast =  new Program(_localctx.start.getLine(),_localctx.start.getCharPositionInLine()+1, definitions);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListDefinitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Var_definitionContext var_definition;
		public Func_definitionContext func_definition;
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<Func_definitionContext> func_definition() {
			return getRuleContexts(Func_definitionContext.class);
		}
		public Func_definitionContext func_definition(int i) {
			return getRuleContext(Func_definitionContext.class,i);
		}
		public ListDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listDefinitions; }
	}

	public final ListDefinitionsContext listDefinitions() throws RecognitionException {
		ListDefinitionsContext _localctx = new ListDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listDefinitions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(65);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ID:
						{
						setState(59);
						((ListDefinitionsContext)_localctx).var_definition = var_definition();
						_localctx.ast.addAll(((ListDefinitionsContext)_localctx).var_definition.ast);
						}
						break;
					case T__0:
						{
						setState(62);
						((ListDefinitionsContext)_localctx).func_definition = func_definition();
						_localctx.ast.add(((ListDefinitionsContext)_localctx).func_definition.ast);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public Definition ast;
		public BodyContext body;
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__0);
			setState(71);
			match(T__1);
			setState(72);
			match(T__2);
			setState(73);
			match(T__3);
			setState(74);
			match(T__4);
			setState(75);
			match(T__5);
			setState(76);
			((MainContext)_localctx).body = body();
			setState(77);
			match(T__6);
			((MainContext)_localctx).ast =  new FuncDefinition(_localctx.start.getLine(), _localctx.start.getCharPositionInLine()+1,"main", 
				new TypeFunction(_localctx.start.getLine(), _localctx.start.getCharPositionInLine()+1,TypeVoid.getInstance(),new ArrayList()),((MainContext)_localctx).body.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public Var_definitionContext var_definition;
		public StatementContext statement;
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(80);
					((BodyContext)_localctx).var_definition = var_definition();
					 
								for(VarDefinition v: ((BodyContext)_localctx).var_definition.ast)
									_localctx.ast.add(v);
							
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__9) | (1L << T__10) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__27) | (1L << T__31) | (1L << T__32) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << ID))) != 0)) {
				{
				{
				setState(88);
				((BodyContext)_localctx).statement = statement();

							for(Statement s: ((BodyContext)_localctx).statement.ast)
								_localctx.ast.add(s);
						
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_definitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public ListIdsContext listIds;
		public TypeContext type;
		public ListIdsContext listIds() {
			return getRuleContext(ListIdsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			((Var_definitionContext)_localctx).listIds = listIds();
			setState(97);
			match(T__4);
			setState(98);
			((Var_definitionContext)_localctx).type = type();
			setState(99);
			match(T__7);

					for(Identifier id : ((Var_definitionContext)_localctx).listIds.ast) 
						_localctx.ast.add(new VarDefinition(((Var_definitionContext)_localctx).type.ast,id.getIdentifier(),id.getLine(),id.getColumn()));
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListIdsContext extends ParserRuleContext {
		public List<Identifier> ast = new ArrayList<Identifier>();
		public Token ID;
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public ListIdsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listIds; }
	}

	public final ListIdsContext listIds() throws RecognitionException {
		ListIdsContext _localctx = new ListIdsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listIds);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			((ListIdsContext)_localctx).ID = match(ID);
			_localctx.ast.add(new Identifier(((ListIdsContext)_localctx).ID.getLine(),((ListIdsContext)_localctx).ID.getCharPositionInLine()+1,(((ListIdsContext)_localctx).ID!=null?((ListIdsContext)_localctx).ID.getText():null)));
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(104);
				match(T__8);
				setState(105);
				((ListIdsContext)_localctx).ID = match(ID);

							Identifier idN = new Identifier(((ListIdsContext)_localctx).ID.getLine(),((ListIdsContext)_localctx).ID.getCharPositionInLine()+1,(((ListIdsContext)_localctx).ID!=null?((ListIdsContext)_localctx).ID.getText():null)); 
							if(!_localctx.ast.contains(idN)){
								_localctx.ast.add(idN);
							}
							else {
								new ErrorType(((ListIdsContext)_localctx).ID.getLine(),((ListIdsContext)_localctx).ID.getCharPositionInLine()+1,"Campo de ids duplicado" + idN.getIdentifier());
							}		
						
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_definitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token ID;
		public Lista_parametrosContext lista_parametros;
		public ReturnTypeContext returnType;
		public BodyContext body;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public Lista_parametrosContext lista_parametros() {
			return getRuleContext(Lista_parametrosContext.class,0);
		}
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public Func_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_definition; }
	}

	public final Func_definitionContext func_definition() throws RecognitionException {
		Func_definitionContext _localctx = new Func_definitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__0);
			setState(113);
			((Func_definitionContext)_localctx).ID = match(ID);
			setState(114);
			match(T__2);
			setState(115);
			((Func_definitionContext)_localctx).lista_parametros = lista_parametros();
			setState(116);
			match(T__3);
			setState(117);
			match(T__4);
			setState(118);
			((Func_definitionContext)_localctx).returnType = returnType();
			setState(119);
			match(T__5);
			setState(120);
			((Func_definitionContext)_localctx).body = body();
			setState(121);
			match(T__6);
			((Func_definitionContext)_localctx).ast =  new FuncDefinition(_localctx.start.getLine(),_localctx.start.getCharPositionInLine()+1,(((Func_definitionContext)_localctx).ID!=null?((Func_definitionContext)_localctx).ID.getText():null),
				new TypeFunction(_localctx.start.getLine(), _localctx.start.getCharPositionInLine()+1,((Func_definitionContext)_localctx).returnType.ast,((Func_definitionContext)_localctx).lista_parametros.ast),((Func_definitionContext)_localctx).body.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTypeContext extends ParserRuleContext {
		public Type ast;
		public TypeSimpleContext typeSimple;
		public TypeSimpleContext typeSimple() {
			return getRuleContext(TypeSimpleContext.class,0);
		}
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
	}

	public final ReturnTypeContext returnType() throws RecognitionException {
		ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnType);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
